--- a/style-guide.html
+++ b/style-guide.html
@@ -30,8 +30,9 @@
         <div id="styleGuideBanner">
             <div class="container">
                 <div class="ct-lt">
-                    <h1>Web design style guide</h1>
-                    <p class="mt15">It ensures consistency within a document and across multiple documents and enforces best practice in usage and in language composition, visual composition, orthography and typography. </p>
+                    <h1>Web Design Style Guide</h1>
+                    <p class="mt15">A style guide is a collection of pre-designed elements, graphics and rules designers or developers should follow to ensure that separate website 
+pieces will be consistent and will create a cohesive experience at the end.</p>
                 </div>
                 <div class="ct-rt"> <img class="img-responsive mauto" src="assets/images/ds-styleGuide-top-illus.png" alt="Web design style guide"/> </div>
             </div>
