--- a/style-guide.html
+++ b/style-guide.html
@@ -16,6 +16,7 @@
 <meta name="description" content="Dynamsoft" />
 <meta name="Keywords" content="Dynamsoft" />
 <title>Dynamsoft Style Guide</title>
+<link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css"/>
 <link rel="stylesheet" type="text/css" href="assets/css/style-guide.css"/>
 <script type="text/javascript" src="assets/js/jquery-1.11.2.js"></script>
 </head>
@@ -26,19 +27,19 @@
             <div id="sideBar">
                 <h1 class="logo-ds"> <a href="http://www.dynamsoft.com/"> </a></h1>
                 <ul id="anchorNav">
-                    <li><a class="bluelink on" href="#3">Company logo</a></li>
-                    <li><a class="bluelink" href="#3">Products logo</a></li>
-                    <li><a class="bluelink" href="#3">Color palette</a></li>
-                    <li><a class="bluelink" href="#3">Button</a></li>
-                    <li><a class="bluelink" href="#3">Form</a></li>
-                    <li><a class="bluelink" href="#3">Typography</a></li>
-                    <li><a class="bluelink" href="#3">Icon</a></li>
-                    <li><a class="bluelink" href="#3">Video</a></li>
-                    <li><a class="bluelink" href="#3">Feedback Info</a></li>
+                    <li class="on"><a class="bluelink" href="#company-logo">Company logo</a></li>
+                    <li><a class="bluelink" href="#products-logo">Products logo</a></li>
+                    <li><a class="bluelink" href="#color-palette">Color palette</a></li>
+                    <li><a class="bluelink" href="#section-button">Button</a></li>
+                    <li><a class="bluelink" href="#section-form">Form</a></li>
+                    <li><a class="bluelink" href="#section-typography">Typography</a></li>
+                    <li><a class="bluelink" href="#section-icon">Icon</a></li>
+                    <li><a class="bluelink" href="#section-video">Video</a></li>
+                    <li><a class="bluelink" href="#feedback-info">Feedback Info</a></li>
                 </ul>
             </div>
             <div id="mainContent">
-                <div id="companyLogo" class="section">
+                <div id="companyLogo" class="section"> <a name="company-logo" id="company-logo"></a>
                     <h2>Company Logo</h2>
                     <div class="lg-logo"> <img class="img-responsive mauto" src="assets/img-icon/logo-dynamsoft-4545x109.png" alt="Dynamsoft logo"/> </div>
                     <div class="md-logo clearfix">
@@ -47,7 +48,7 @@
                         <!--<div class="item orangeBg"> <img class="img-responsive mauto" src="assets/img-icon/logo-dynamsoft-orangeBg-190x47.png" alt="Dynamsoft logo"/> </div>--> 
                     </div>
                 </div>
-                <div id="productsLogo" class="section">
+                <div id="productsLogo" class="section"> <a name="products-logo" id="products-logo"></a>
                     <h2>Products logo</h2>
                     <div class="clearfix">
                         <ul class="ct-lt">
@@ -81,7 +82,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="colorPalette" class="section">
+                <div id="colorPalette" class="section"> <a name="color-palette" id="color-palette"></a>
                     <h2>Color palette</h2>
                     <table class="orange">
                         <tr>
@@ -124,7 +125,7 @@
                         </tr>
                     </table>
                 </div>
-                <div id="sectionButton" class="section">
+                <div id="sectionButton" class="section"> <a name="section-button" id="section-button"></a>
                     <h2>Button</h2>
                     <div class="clearfix">
                         <div class="ct-lt">
@@ -138,54 +139,119 @@
                             </ul>
                         </div>
                         <div class="ct-rt">
-                            <div class="item clearfix">
+                            <div class="state clearfix">
                                 <ul class="default">
                                     <li>Default:</li>
-                                    <li><a class="d-btn smBtn" style="background:#fe8e14; color:#fff;" href="javascript:void(0);">#fe8e14</a></li>
-                                    <li><a class="d-btn smBtn" style="background:#fff; color:#fe8e14;" href="javascript:void(0);">#fe8e14</a></li>
-                                    <li><a class="d-btn smBtn" style="background: #50a8e1; border-color: #50a8e1; color: #fff;" href="javascript:void(0);">#50a8e1</a></li>
-                                    <li><a class="d-btn smBtn" style="color: #50a8e1; border-color: #50a8e1; background: none;" href="javascript:void(0);">#50a8e1</a></li>
-                                    <li><a class="d-btn smBtn" style="background:#f5f5f5; color:#606060; border-color:#ddd;" href="javascript:void(0);">#f5f5f5</a></li>
+                                    <li><a class="d-btn " style="background:#fe8e14; color:#fff;" href="javascript:void(0);">#fe8e14</a></li>
+                                    <li><a class="d-btn " style="background:#fff; color:#fe8e14;" href="javascript:void(0);">#fe8e14</a></li>
+                                    <li><a class="d-btn " style="background: #50a8e1; border-color: #50a8e1; color: #fff;" href="javascript:void(0);">#50a8e1</a></li>
+                                    <li><a class="d-btn " style="color: #50a8e1; border-color: #50a8e1; background: none;" href="javascript:void(0);">#50a8e1</a></li>
+                                    <li><a class="d-btn " style="background:#f5f5f5; color:#606060; border-color:#ddd;" href="javascript:void(0);">#f5f5f5</a></li>
                                 </ul>
                                 <ul class="hover">
                                     <li>Hover:</li>
-                                    <li><a class="d-btn smBtn" style="background: #ffae38; color:#fff; border-color: #ffae38;" href="javascript:void(0);">#ffae38</a></li>
-                                    <li><a class="d-btn smBtn" style="background: #ffae38; color:#fff; border-color: #ffae38;" href="javascript:void(0);">#ffae38</a></li>
-                                    <li><a class="d-btn smBtn" style="border-color: #61c2ec; background: #61c2ec; color:#fff;" href="javascript:void(0);">#61c2ec</a></li>
-                                    <li><a class="d-btn smBtn" style="border-color: #61c2ec; background: #61c2ec; color:#fff;" href="javascript:void(0);">#fe8e14</a></li>
-                                    <li><a class="d-btn smBtn" style="background:#fff; color:#606060; border-color:#ddd;" href="javascript:void(0);">#fe8e14</a></li>
+                                    <li><a class="d-btn " style="background: #ffae38; color:#fff; border-color: #ffae38;" href="javascript:void(0);">#ffae38</a></li>
+                                    <li><a class="d-btn " style="background: #ffae38; color:#fff; border-color: #ffae38;" href="javascript:void(0);">#ffae38</a></li>
+                                    <li><a class="d-btn " style="border-color: #61c2ec; background: #61c2ec; color:#fff;" href="javascript:void(0);">#61c2ec</a></li>
+                                    <li><a class="d-btn " style="border-color: #61c2ec; background: #61c2ec; color:#fff;" href="javascript:void(0);">#fe8e14</a></li>
+                                    <li><a class="d-btn " style="background:#fff; color:#606060; border-color:#ddd;" href="javascript:void(0);">#fe8e14</a></li>
                                 </ul>
                                 <ul class="minority">
-                                    <li><a class="d-btn smBtn" style="border-color: #fff; background: none; color: #fff;" href="javascript:void(0);">frame: #fff</a></li>
-                                    <li><a class="d-btn smBtn" style="border-color:#ffae38; background:#fe8e14; color:#fff;" href="javascript:void(0);">#fe8e14</a></li>
-                                    <li style="margin-top:40px;"><a class="d-btn smBtn" style="border-color: #fff; background: #fff; color: #fe8e14;" href="javascript:void(0);">#fe8e14</a></li>
-                                    <li><a class="d-btn smBtn" style="border-color: #ffae38; background: #ffae38; color: #fff;" href="javascript:void(0);">#fe8e14</a></li>
+                                    <li><a class="d-btn " style="border-color: #fff; background: none; color: #fff;" href="javascript:void(0);">frame: #fff</a></li>
+                                    <li><a class="d-btn " style="border-color:#ffae38; background:#fe8e14; color:#fff;" href="javascript:void(0);">#fe8e14</a></li>
+                                    <li style="margin-top:40px;"><a class="d-btn " style="border-color: #fff; background: #fff; color: #fe8e14;" href="javascript:void(0);">#fe8e14</a></li>
+                                    <li><a class="d-btn " style="border-color: #ffae38; background: #ffae38; color: #fff;" href="javascript:void(0);">#fe8e14</a></li>
                                 </ul>
                             </div>
                             <div class="item combination clearfix">
                                 <h3>Button Combination</h3>
-                                <ul class="default" style="margin-right:50px;">
-                                    <li>&nbsp;</li>
-                                    <li><a class="d-btn smBtn bgOrange" href="javascript:void(0);">d-btn smBtn bgOrange</a></li>
-                                    <li><a class="d-btn smBtn" href="javascript:void(0);">d-btn smBtn</a></li>
-                                    <li><a class="d-btn smBtn bgBlue" href="javascript:void(0);">d-btn smBtn bgBlue</a></li>
-                                    <li><a class="d-btn smBtn brBlue" href="javascript:void(0);">d-btn smBtn brBlue</a></li>
-                                    <li><a class="d-btn smBtn" href="javascript:void(0);">#f5f5f5</a></li>
+                                <ul class="item">
+                                    <li><a class="d-btn" href="javascript:void(0);">d-btn</a></li>
+                                    <li><a class="d-btn bgOrange" href="javascript:void(0);">d-btn bgOrange</a></li>
+                                    <li><a class="d-btn bgBlue" href="javascript:void(0);">d-btn bgBlue</a></li>
+                                    <li><a class="d-btn brBlue" href="javascript:void(0);">d-btn brBlue</a></li>
+                                    <li><a class="d-btn bgGray" href="javascript:void(0);">d-btn bgGray</a></li>
                                 </ul>
-                                <ul class="minority">
-                                    <li><a class="d-btn smBtn" style="border-color: #fff; background: none; color: #fff;" href="javascript:void(0);">frame: #fff</a></li>
-                                    <li><a class="d-btn smBtn" style="border-color:#ffae38; background:#fe8e14; color:#fff;" href="javascript:void(0);">#fe8e14</a></li>
-                                    <li style="margin-top:40px;"><a class="d-btn smBtn" style="border-color: #fff; background: #fff; color: #fe8e14;" href="javascript:void(0);">#fe8e14</a></li>
-                                    <li><a class="d-btn smBtn" style="border-color: #ffae38; background: #ffae38; color: #fff;" href="javascript:void(0);">#fe8e14</a></li>
+                                <ul class="item item-md">
+                                    <li><a class="d-btn mdBtn" href="javascript:void(0);">d-btn mdBtn</a></li>
+                                    <li><a class="d-btn mdBtn bgOrange" href="javascript:void(0);">d-btn mdBtn bgOrange</a></li>
+                                    <li><a class="d-btn mdBtn bgBlue" href="javascript:void(0);">d-btn mdBtn bgBlue</a></li>
+                                    <li><a class="d-btn mdBtn brBlue" href="javascript:void(0);">d-btn mdBtn brBlue</a></li>
+                                    <li><a class="d-btn mdBtn bgGray" href="javascript:void(0);">d-btn mdBtn bgGray</a></li>
+                                </ul>
+                                <ul class="item item-lg">
+                                    <li><a class="d-btn lgBtn" href="javascript:void(0);">d-btn lgBtn</a></li>
+                                    <li><a class="d-btn lgBtn bgOrange" href="javascript:void(0);">d-btn lgBtn bgOrange</a></li>
+                                    <li><a class="d-btn lgBtn bgBlue" href="javascript:void(0);">d-btn lgBtn bgBlue</a></li>
+                                    <li><a class="d-btn lgBtn brBlue" href="javascript:void(0);">d-btn lgBtn brBlue</a></li>
+                                    <li><a class="d-btn lgBtn bgGray" href="javascript:void(0);">d-btn lgBtn bgGray</a></li>
+                                </ul>
+                                <ul class="minority clearfix">
+                                    <li><a class="d-btn mdBtn brWhite" href="javascript:void(0);">d-btn mdBtn brWhite</a></li>
+                                    <li><a class="d-btn mdBtn bgWhite" href="javascript:void(0);">d-btn mdBtn bgWhite</a></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                 </div>
+                <div id="sectionForm" class="section"> <a name="section-form" id="section-form"></a>
+                    <h2>Form</h2>
+                    <table class="input-grp">
+                        <tr>
+                            <td width="31%"><input type="text" value="Textbox"/></td>
+                            <td width="38%"><input type="text" class="focus" value="Focus"/></td>
+                            <td width="31%"><input type="text" class="error" value="Error"/></td>
+                        </tr>
+                        <tr>
+                            <td class="a-search"><input type="text" value="Search"/><a href="#3"><i class="fa fa-search" aria-hidden="true"></i>
+</a></td>
+                            <td><input type="text" value="Disabled" disabled="disabled"/></td>
+                            <td><input type="text" class="default" value="Default"/></td>
+                        </tr>
+                        <tr>
+                            <td class="input-file" colspan="2"><input type="file"/></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
-    <div id="footer"></div>
+    <div id="footer"> <a href="javascript:void(0)" id="toTop"></a>
+        <p>© 2003–2017 Dynamsoft. All rights reserved. <a target="_blank" class="bluelink" href="http://www.dynamsoft.com/PrivacyStatement.aspx">Privacy Statement</a> / <a target="_blank" class="bluelink" href="http://www.dynamsoft.com/SiteMap.html">Site Map</a> / <a target="_blank" class="bluelink" href="http://www.dynamsoft.com/">Home</a> / <a target="_blank" class="bluelink" href="http://www.dynamsoft.com/Support/How-to-purchase-Dynamsoft-products.aspx">Purchase</a> / <a target="_blank" class="bluelink" href="http://www.dynamsoft.com/Support/Support.aspx">Support</a></p>
+    </div>
 </div>
+<script type="text/javascript">
+$("#anchorNav li").each(function(index, element) {
+    $(this).click(function(){
+		$("#anchorNav li").removeClass('on');
+		$(this).addClass('on');
+		});
+});;
+/*toTop && sunNav-scroll-fixed*/
+$("#toTop").hide();
+$(window).scroll(function(){
+   var windowScTop = $(window).scrollTop();
+   if (windowScTop>100){
+		$("#toTop").fadeIn();
+	}else{
+		$("#toTop").fadeOut();
+	}
+});
+$("#toTop").click(function(){
+		$('body,html').animate({scrollTop:0},500);
+		return false;		
+	 });
+</script>
 </body>
 </html>
