--- a/style-guide.html
+++ b/style-guide.html
@@ -36,11 +36,12 @@
                     <li><a class="bluelink" href="#section-icon">Icon</a></li>
                     <li><a class="bluelink" href="#section-video">Video</a></li>
                     <li><a class="bluelink" href="#feedback-info">Feedback Info</a></li>
+                    <li><a class="bluelink" href="#section-illus">Illustration</a></li>
                 </ul>
             </div>
             <div id="mainContent">
                 <div id="companyLogo" class="section"> <a name="company-logo" id="company-logo"></a>
-                    <h2>Company Logo  </h2>
+                    <h2>Company Logo </h2>
                     <div class="lg-logo"> <img class="img-responsive mauto" src="assets/img-icon/logo-dynamsoft-4545x109.png" alt="Dynamsoft logo"/> </div>
                     <div class="md-logo clearfix">
                         <div class="item whiteBg"> <img class="img-responsive mauto" src="assets/img-icon/logo-dynamsoft-whiteBg-190x47.png" alt="Dynamsoft logo"/> </div>
@@ -716,6 +717,91 @@
                                 <span>hsb: 120/10/100</span></td>
                         </tr>
                     </table>
+                </div>
+                <div id="illustration" class="section"> <a name="section-illus" id="section-illus"></a>
+                    <h2>Illustration</h2>
+                    <p style="margin:22px 0 0;">Illustrations should be as meaningful as possible and follow the rules below.</p>
+                    <div class="item clearfix color">
+                        <div class="ct-lt">
+                            <p>Primary color</p>
+                            <div class="dlGrp clearfix">
+                                <dl class="a">
+                                    <dt></dt>
+                                    <dd>#e6eaec</dd>
+                                </dl>
+                                <dl class="b">
+                                    <dt></dt>
+                                    <dd>#ccd4d9</dd>
+                                </dl>
+                                <dl class="c">
+                                    <dt></dt>
+                                    <dd>#fe8e14</dd>
+                                </dl>
+                                <dl class="d">
+                                    <dt></dt>
+                                    <dd>#fedb31</dd>
+                                </dl>
+                            </div>
+                        </div>
+                        <div class="ct-rt">
+                            <p>Extended color</p>
+                            <div class="dlGrp clearfix">
+                                <dl class="e">
+                                    <dt></dt>
+                                    <dd>#dbf1fb</dd>
+                                </dl>
+                                <dl class="f">
+                                    <dt></dt>
+                                    <dd>#c3e3f2</dd>
+                                </dl>
+                                <dl class="g">
+                                    <dt></dt>
+                                    <dd>#39bec2</dd>
+                                </dl>
+                                <dl class="h">
+                                    <dt></dt>
+                                    <dd>#22c969</dd>
+                                </dl>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item clearfix text">
+                        <div class="ct-lt">
+                           <p>Example:</p>
+                           <div class="clearfix mt15">
+                             <img style="float:left;" src="assets/images/illus-text1.png" alt="Example"/>
+                             <div style="float:left; padding:0 0 0 20px; margin-top:-5px;">
+                                <p class="f14">Corner radius: 3px</p>
+                                <p class="f14" style="margin:8px 0;">Stroke: 1px    #ddd</p>
+                                <p class="f14">Text Format: line  #e6eaec</p>
+                                <img style="margin:20px 0 0;" src="assets/images/illus-text2.png" alt="Example"/>
+                             </div>
+                           </div>
+                        </div>
+                        <div class="ct-rt">
+                           <p>Drop Shadow (Structure)</p>
+                           <div class="shadow mt15">
+                              <ul>
+                                 <li><span>Blend Mode:</span><span> Nomal&nbsp;&nbsp;&nbsp; #aaa</span></li>
+                                 <li><span>Opacity:</span><span>30%</span></li>
+                                 <li><span>Angle:</span><span>90</span></li>
+                                 <li><span>Distance:</span><span>2px</span></li>
+                                 <li><span>Spread:</span><span>0%</span></li>
+                                 <li><span>Size:</span><span>3px</span></li>
+                              </ul>
+                           </div>
+                        </div>
+                    </div>
+                    <div class="item clearfix document">
+                       <p>Document Format (suggest but not enforce)</p>
+                       <div class="clearfix mt25">
+                          <img src="assets/images/jpg.png" alt="jpeg"/>
+                          <img src="assets/images/pdf.png" alt="pdf"/>
+                          <img src="assets/images/doc.png" alt="document"/>
+                          <img src="assets/images/ppt.png" alt="ppt"/>
+                          <img src="assets/images/excel.png" alt="excel"/>
+                       </div>
+                    </div>
                 </div>
             </div>
             <!-- mainContent end --> 
