--- a/style-guide.html
+++ b/style-guide.html
@@ -18,6 +18,7 @@
 <title>Dynamsoft Style Guide</title>
 <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css"/>
 <link rel="stylesheet" type="text/css" href="assets/css/style-guide.css"/>
+<link type="text/css" rel="shortcut icon" href="assets/img-icon/favicon.ico"/>
 <script type="text/javascript" src="assets/js/jquery-1.11.2.js"></script>
 </head>
 <body>
