--- a/style-guide.html
+++ b/style-guide.html
@@ -153,9 +153,9 @@
                                 <ul class="hover">
                                     <li>Hover:</li>
                                     <li><a class="d-btn " style="background: #ffae38; color:#fff; border-color: #ffae38;" href="javascript:void(0);">#ffae38</a></li>
-                                    <li><a class="d-btn " style="background: #ffae38; color:#fff; border-color: #ffae38;" href="javascript:void(0);">#ffae38</a></li>
+                                    <li><a class="d-btn " style="color:#ffae38; border-color: #ffae38;" href="javascript:void(0);">#ffae38</a></li>
                                     <li><a class="d-btn " style="border-color: #61c2ec; background: #61c2ec; color:#fff;" href="javascript:void(0);">#61c2ec</a></li>
-                                    <li><a class="d-btn " style="border-color: #61c2ec; background: #61c2ec; color:#fff;" href="javascript:void(0);">#fe8e14</a></li>
+                                    <li><a class="d-btn " style="border-color: #61c2ec; color:#61c2ec;" href="javascript:void(0);">#61c2ec</a></li>
                                     <li><a class="d-btn " style="background:#fff; color:#606060; border-color:#ddd;" href="javascript:void(0);">#fe8e14</a></li>
                                 </ul>
                                 <ul class="minority">
