--- a/style-guide.html
+++ b/style-guide.html
@@ -58,9 +58,11 @@
                     <div id="Company-Logo">
                         <h1 class="fontOswaldLight  mb30">Company Logo 
                             <div class="downloadZip fr bgGray">
-                                <i class="zip-file"></i>
-                                <p class="fontRegular">Dynamsoft Logo</p>
-                                <p class="fontRegular">220 KB October 23, 2020</p>
+                                <a href="./assets/files/dynamsoft_logos.zip">
+                                    <i class="zip-file"></i>
+                                    <p class="fontRegular">Dynamsoft Logo</p>
+                                    <p class="fontRegular">220 KB October 23, 2020</p>
+                                </a>
                             </div>
                         </h1>
                         <div class="bgWhite mt120">
@@ -74,9 +76,11 @@
                     <div>
                         <h1 class="fontOswaldLight h2 mb30" id="Product-Logos">Product Logos
                             <div class="downloadZip fr bgGray">
-                                <i class="zip-file"></i>
-                                <p class="fontRegular">Product Logos</p>
-                                <p class="fontRegular">1,083 KB October 23, 2020</p>
+                                <a href="./assets/files/dynamsoft_product logos.zip">
+                                    <i class="zip-file"></i>
+                                    <p class="fontRegular">Product Logos</p>
+                                    <p class="fontRegular">1,083 KB October 23, 2020</p>
+                                </a>
                             </div>
                         </h1>
                         <div class="logo-horizontal mt120">
@@ -442,7 +446,7 @@
                         </div>
                         <div class="OSIcons d-inline-block w50 mt100">
                             <h2 class="h3">OS</h2>
-                            <i class="fab fa-internet-explorer"><span>Windows</span></i>
+                            <i class="fab fa-windows"><span>Windows</span></i>
                             <i class="fab fa-linux"><span>Linux</span></i>
                             <i class="macos"><span>macOS</span></i>
                             <i class="fab fa-apple"><span>Apple</span></i>
