--- a/style-guide.html
+++ b/style-guide.html
@@ -85,7 +85,7 @@
                         </h1>
                         <div class="logo-horizontal mt120">
                             <div style="background-image: url(./assets/images/icons/product-logo-SVG/DBR_Horizontal_Black.svg);"></div>
-                            <div style="background-image: url(./assets/images/icons/product-logo-SVG/DLR_Horizontal_Black.svg);"></div>
+                            <div style="height: 66px; vertical-align: top;width: calc(50% - 10px); margin-top: 5px;margin-left: 4px;background-image: url(./assets/images/icons/product-logo-SVG/DLR_Horizontal_Black.svg);"></div>
                             <div style="background-image: url(./assets/images/icons/product-logo-SVG/DWT_Horizontal_Black.svg);"></div>
                             <div style="background-image: url(./assets/images/icons/product-logo-SVG/DNT_Horizontal_Black.svg);"></div>
                             <div style="background-image: url(./assets/images/icons/product-logo-SVG/DCE_Horizontal_Black.svg);"></div>
