style zip file update

--- a/style-guide.html
+++ b/style-guide.html
@@ -76,10 +76,10 @@
                     <div>
                         <h1 class="fontOswaldLight h2 mb30" id="Product-Logos">Product Logos
                             <div class="downloadZip fr bgGray">
-                                <a href="./assets/files/dynamsoft_product logos.zip">
+                                <a href="./assets/files/dynamsoft-product-logos.zip">
                                     <i class="zip-file"></i>
                                     <p class="fontRegular">Product Logos</p>
-                                    <p class="fontRegular">1,083 KB October 23, 2020</p>
+                                    <p class="fontRegular">1,083 KB Feburary 22, 2022</p>
                                 </a>
                             </div>
                         </h1>
