--- a/style-guide.html
+++ b/style-guide.html
@@ -168,7 +168,7 @@
                                 </td>
                                 <td>
                                     <div>
-                                        <h3>Bluemine</h3>
+                                        <h3>Blumine</h3>
                                         <p><i class="colorBlock"
                                                 style="background-color: #306877;"></i><span>#306877</span></p>
                                         <p><i class="colorBlock"
